fix header on mobile cms

--- a/src/app/design/frontend/Scandiweb/pwa/src/app/component/Header/Header.style.scss
+++ b/src/app/design/frontend/Scandiweb/pwa/src/app/component/Header/Header.style.scss
@@ -588,8 +588,4 @@
             order: 2;
         }
     }
-
-    &-MenuWrapper {
-        order: -2;
-    }
 }
